gcp/k8s.tf
# google_client_config and kubernetes provider must be explicitly specified like the following.
provider "kubernetes" {
  host                   = "https://${data.google_container_cluster.primary.endpoint}"
  token                  = data.google_client_config.default.access_token
  client_certificate     = base64decode(google_container_cluster.primary.master_auth[0].client_certificate)
  cluster_ca_certificate = base64decode(google_container_cluster.primary.master_auth[0].cluster_ca_certificate)
  client_key             = base64decode(google_container_cluster.primary.master_auth[0].client_key)
  # config_path            = "~/.kube/config"
}

# resource "kubernetes_namespace" "itp4121-namespace" {
#   metadata {
#     name = "my-terraform-namespace"
#   }
# }

data "google_container_cluster" "primary" {
  name     = google_container_cluster.primary.name
  location = google_container_cluster.primary.location
}

data "local_file" "deployment" {
  filename = "${path.module}/deployment.yaml"
}

# resource "kubernetes_manifest" "deployment" {
#   manifest = yamldecode(data.local_file.deployment.content)
# }

data "google_client_config" "default" {}

resource "google_service_account" "project" {
  account_id   = "itp4121-service-account"
  display_name = "ITP4121 Service Account"
}

resource "google_project_iam_member" "artifact_registry_policy" {
  project = var.project
  role    = "roles/artifactregistry.reader"
  member  = "serviceAccount:${google_service_account.project.email}"
}

resource "google_logging_project_sink" "log" {
  name                   = "log"
  destination            = "storage.googleapis.com/${google_storage_bucket.logs-storage.name}"
  filter                 = "resource.type=\"k8s_container\""
  unique_writer_identity = true
}

resource "google_storage_bucket" "logs-storage" {
  name     = "${var.project}-logs"
  location = var.location
}

resource "google_storage_bucket_iam_member" "logs_storage_iam" {
  bucket = google_storage_bucket.logs-storage.name
  role   = "roles/storage.objectCreator"
  member = "serviceAccount:${google_service_account.project.email}"
}

resource "google_container_cluster" "primary" {
  name                = "${var.project}-primary"
  location            = var.location
  deletion_protection = false
  network             = google_compute_network.test.name
  subnetwork          = google_compute_subnetwork.subnet1.name
  logging_service     = "logging.googleapis.com/kubernetes"

  node_pool {
    name = "terraform-node-pool"
    autoscaling {
      min_node_count = 1
      max_node_count = 3
    }
    node_config {
      service_account = google_service_account.project.email
      oauth_scopes = [
        "https://www.googleapis.com/auth/cloud-platform",
        "https://www.googleapis.com/auth/logging.write",
        "https://www.googleapis.com/auth/monitoring"
      ]
    }
  }
}

resource "kubernetes_persistent_volume" "app" {
  metadata {
    name = "app"
  }
  spec {
    capacity = {
      storage = "100Gi"
    }
    access_modes = ["ReadWriteOnce"]
    persistent_volume_source {
      gce_persistent_disk {
        pd_name = google_compute_disk.primary.name
      }
    }
    storage_class_name = "standard-rwo" # Add this line
  }
}

resource "kubernetes_persistent_volume_claim" "app" {
  metadata {
    name = "app"
  }
  spec {
    access_modes = ["ReadWriteOnce"]
    resources {
      requests = {
        storage = "10Gi"
        # deletion_protection = false
      }
    }
    volume_name        = kubernetes_persistent_volume.app.metadata[0].name
    storage_class_name = "standard-rwo" # Add this line
  }
}

resource "kubernetes_deployment" "app" {
  metadata {
    name = "app"
  }
  spec {
    replicas = 3
    selector {
      match_labels = {
        app = "app"
      }
    }
    template {
      metadata {
        labels = {
          app = "app"
        }
      }
      spec {
        container {
          name  = "app"
          image = var.image_url
          resources {
            limits = {
              cpu    = "0.5"
              memory = "512Mi"
            }
            requests = {
              cpu    = "250m"
              memory = "50Mi"
            }
          }
          volume_mount {
            mount_path = "/app"
            name       = "app"
          }
          port {
            container_port = 8080
          }
        }
        volume {
          name = "app"
          persistent_volume_claim {
            claim_name = kubernetes_persistent_volume_claim.app.metadata[0].name
          }
        }
      }
    }
  }
}

resource "kubernetes_horizontal_pod_autoscaler" "app" {
  metadata {
    name = "app"
  }
  spec {
    max_replicas = 10
    min_replicas = 3
    scale_target_ref {
      api_version = "apps/v1"
      kind        = "Deployment"
      name        = kubernetes_deployment.app.metadata[0].name
    }
    target_cpu_utilization_percentage = 50
  }
}

resource "kubernetes_service" "app" {
  metadata {
    name = "app"
    annotations = {
      "cloud.google.com/neg" = "{\"ingress\": true}"
    }
  }
  spec {
    selector = {
      app = "app"
    }
    port {
      protocol    = "TCP"
      port        = 80
      target_port = 8080
    }
    type             = "LoadBalancer"
    session_affinity = "ClientIP"
    load_balancer_ip = google_compute_address.default.address
  }
}

resource "kubernetes_ingress_v1" "primary" {
  metadata {
    name = "primary-ingress"
  }
  spec {
    rule {
      host = var.domain_name # Replace with your domain name
      http {
        path {
          path_type = "Prefix"
          path      = "/"
          backend {
            service {
              name = kubernetes_service.app.metadata[0].name
              port {
                number = 80
              }
            }
          }
        }
      }
    }
  }
}
